--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http-status": "^1.7.4",
     "mongoose": "^8.5.0",
     "qs": "^6.12.3",
+    "stripe": "^16.2.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
